# MinRaycastingEngine

./: CMakeLists.txt  Makefile  README.md  Test_file_for_one_branch.c  WALL97.xpm  all_free.c  big_kek.c  create_win.c  find_player.c  get_next_line.c  get_next_line_utils.c  main.c  map.cub  map.noncub  map_validate.c  map_village.cub  messages.c  mlx_commands.c  movements.c  parse_color.c  parse_set.c  parser_map.c  parser_map_stuff.c  print_ray.c  ray.c  scene_put.c  screan.c  sprite_preparation.c  stuff.c  to_window.c
doc/: task
gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
hdrs/: cub3d.h  get_next_line.h  map_puuser.h  mlx.h
textures/: brick.xpm  one_punch.xpm  stone.xpm  wood.xpm
textures/128/: acacia_log.xpm  ancient_debris_side.xpm  ancient_debris_top.xpm  birch_log.xpm  birch_sapling.xpm  brick.xpm
textures/32/: metal.xpm  pillar.xpm
textures/64/: bookshelf.xpm  crackover.xpm
textures/pics/: barrel.xpm  bluestone.xpm  colorstone.xpm  eagle.xpm  greystone.xpm  mossy.xpm  pillar.xpm  wood.xpm
